# little-becky

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.adoc  rustfmt.toml  rustfmt_pedantic.toml
.cargo/: README.md
.github/: rust_pedantic.py
.github/workflows/: quality-ci.yml  release.yml
src/: args.rs  copy.rs  logger.rs  main.rs  process.rs  time_utils.rs  utils.rs
src/args/: cli.rs  error.rs  mod.rs  resolve.rs
src/process/: copy.rs  error.rs  event_handler.rs  init.rs  mod.rs  watcher.rs
src/state/: error.rs  init.rs  mod.rs  structures.rs  update.rs
